--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.27.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
