--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react": "^18.0.18",
     "dotenv": "^16.0.0",
     "firebase": "^9.4.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.27.1",
     "react-router-dom": "^6.0.2",
@@ -21,7 +23,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-dotenv && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.31.8"
   }
 }
